js: draw the board

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -7,7 +7,6 @@
     <script data-main="js/rjs" src="bower_components/requirejs/require.js"></script>
   </head>
   <body>
-    <div id="example"></div>
-    <p>There should be a tetris game above.</p>
+    <div id="tetris"></div>
   </body>
 </html>
