increment and decrement cell colors by arrow keys

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Tetris</title>
     <link href="css/default.css" rel="stylesheet" type="text/css" />
+    <script src="bower_components/keymaster/keymaster.js"></script>
     <script data-main="js/rjs" src="bower_components/requirejs/require.js"></script>
   </head>
   <body>
