--- a/purescript/html/index.html
+++ b/purescript/html/index.html
@@ -8,6 +8,6 @@
       </script>
   </head>
   <body>
-      <canvas id="canvas" width=500 height=500></canvas>
+      <canvas id="game" width=500 height=500></canvas>
   </body>
 </html>
