purescript: html to load keymaster.js

--- a/purescript/html/index.html
+++ b/purescript/html/index.html
@@ -3,6 +3,7 @@
   <head>
       <title>Tetris</title>
       <script type="text/javascript" src="Main.js"></script>
+      <script type="text/javascript" src="keymaster.js"></script>
       <script type="text/javascript">
        window.onload = PS.Main.main;
       </script>
